- Navigation overlap issue fixed.

--- a/style.css
+++ b/style.css
@@ -18,18 +18,19 @@ table {
   padding: 0px;
   height: 40px;
   position: relative;
+  display: flex;
 }
 .nav-bar {
   margin: 0;
-  position: absolute;
   width: 100%;
-  z-index: -1;
 }
 .auto-save-bar {
   width: fit-content;
   align-items: end;
   display: flex;
   margin-left: auto;
+  position: absolute;
+  right: 0;
 }
 .auto-save-label {
   margin-left: auto;
